# langchain-starter

./: NOTE.md  README.md  pyproject.toml
app/: client.ipynb  server.py
app/models/: joke.py
