[tool.poetry]
name = "langchain_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["all"], version = "^0.3.1"}
pydantic = "^2.9.0"
langchain-ollama = "^0.2.3"
langchain = "^0.3.18"
langchain-core = "^0.3.35"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
